--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.1",
+    "immer": "^5.3.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "reactotron-react-js": "^3.3.7",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
